Testing UI logic